reformatted home image and Site Overview to be side by side, change nav bar collapse to MD to fix a responsiveness issue, add Transport and Directions sections to home page

--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,15 @@
+/* Import cool fonts, Lato one of the most commonly used */
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+
+body {
+    font-family: Lato, sans-serif;
+}
+
+p {
+    font-family:Lato, sans-serif;
+}
+
 .navbar-brand {
     font-size: 1.5rem !important;
 }
